smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/mixins/with-but-no-ids.smithy
// Syntax error at line 5, column 21: Expected IDENTIFIER but found RBRACKET(']') | Model
$version: "2"
namespace com.foo

structure Foo with [] {}
